When word is replaced via spellcheck dialog, an Undo action labeled "Overwrite: $1". It is in Russian localization, so it may be localization-specific issue.
Confirmed for LibreOffice 3.4 340m1(Build:103) on OpenSuse Linux, English Version. No real steps to reproduce, just type an unknown word and then check it via spell-check. Make the change and then open Edit->Undo. Should show up as "Overwrite $1".
[This is an automated message.] This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it started right out as NEW without ever being explicitly confirmed. The bug is changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases. Details on how to test the 3.5.0 beta1 can be found at: http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1 more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
So year has passed and crap still there.
I have just checked using LibreOffice 3.7.0.alpha0 (Build ID: 96c5fb1) and I cannot reproduce this bug. When I put in a wrong word and replace it with a word from spell check, then go to edit -> undo I see things that make sense. Example: typed "flarb" replaced with "flab" when I go to edit I see: "Undo: Replace 'flarb' -> 'flab' Ctrl + Z" Same for Version 3.6.0.4 (Build ID: 932b512) Marking as WORKSFORME. If this is still a problem can you provide your version and reopen this as UNCONFIRMED or NEW if your version is at least 3.6.0.4. Thanks for helping us, apologies for the delay, we have over 3100 confirmed bugs we're dealing with
Still present in 3.6.1.1.
Can you add an image attachment to show us what you're talking about. I still don't see the problem. Marking as NEEDINFO until provided. Once you attach it please reopen as UNCONFIRMED and we'll take a look at it. You're probably right that it's specific to the locale
Created attachment 67014 [details] 3.6.1.2 Screenshot Now stop fucking with bugzilla and other people's bugs.
It's called triaging, To Triage: Noun: The action of sorting according to quality. I suspect your comment may move the bug down quite a bit in the priority list for any developer thinking about working on it. We tend to not swear or get angry at volunteers, but who knows, maybe you just bumped this up to high priority but being....whatever that was. I'll also be reporting this to FDO as well as to LibreOffice as I suspect it's breaking several of the policies regarding our project Best Regards
REPRODUCIBLE with LibreOffice 3.6.1.2, German (!) langpack installed, on Mac OS X 10.6.8 (Intel). So: a) NOT localization-specific, at least not specific to Russian UI, and b) NOT platform-specific. To test, I did: 1) Start LibreOffice 3.6.1.2. 2) Create a new Writer document. 3) Type some nonsense. I used just a single word: build followed by a single newline/carriage return; this was really nonsense, because the default language was German, and therefore "build" was marked as wrong by the little red wavy line. 4) Select "Tools > Spelling and Grammar..." from the menu. 5) Go word for word over the text, replacing every word by some choice from the replacement list and clicking "Change", until LibreOffice says "Spell checking is complete"; for me, the final result was: Bild still followed by a single newline/carriage return. 6) Now take a look at menu "Edit": the first entries now read Rückgängig: Überschreiben: $1 Wiederherstellen Letzter Befehl: Überschreiben: $1 I will attach a screenshot of this result.
Created attachment 67017 [details] Screenshot for bug 40025, LibB 3.6.1.2 on Mac OS X 10.6.8
(In reply to comment #3) > So year has passed and crap still there. Citing a "urmasd": "Comfort of software pirates and cheapscates is not a primary developers' concern. You are getting what you have paid for, so please be civil and humble." (https://issues.apache.org/ooo/show_bug.cgi?id=120107#c1)
Created attachment 67027 [details] The menu in Norwegian Bokmål on 3.5.6.2.
Created attachment 67028 [details] The menu in Norwegian Bokmål on 3.6.1.2.
Take note of the redo part in Norwegian Bokmål, and the missing shortcut.
(In reply to comment #14) > Take note of the redo part in Norwegian Bokmål, and the missing shortcut. Confirmed in US English on the same installations as well. The shortcut for the Repeat function is substituted with the word "Redo".
git grep 'Overwrite:' and see why - when that string is used, the substitution isn't happening :-)
As the important part is using the spellchecking dialog, and not the contextmenu, adjusting the subject.
Caolan McNamara committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=85b0beae596e3177e0435d313a0ee4e90a6fde77 Resolves: fdo#40025 add text correction undo id The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Assigned ex post to Caolán, to honor his work.