Resolves: fdo#40025 add text correction undo id

instead of a single overwrite foo so now the undo message is
"Text Correction" for a spell or grammar change

Change-Id: I0227780ba9024ff903632923dd94238719b65764